groups/flowDefinitions/objects/TW1_Equipe_Vendas__c.object
<CustomObject>
    <fields>
        <fullName>Regional__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipe de vendas</relationshipLabel>
        <relationshipName>TW1_Equipes_vendas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Atuacao__c</fullName>
        <label>Atuação</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executivo de Loja</fullName>
                </value>
                <value>
                    <fullName>Executivo de Mall &amp; Mídia</fullName>
                </value>
                <value>
                    <fullName>Gerente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Equipes de vendas</relationshipLabel>
        <relationshipName>Equipe_vendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Usuario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usuário</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Equipe_vendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Equipe de vendas</label>
    <nameField>
        <displayFormat>Venda#{000}</displayFormat>
        <label>Identificador da Equipe de vendas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipes de vendas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>